Fixed spacing when <ul> is followed by <h2> and moved Contact to the top

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,7 +1,8 @@
 @use "lengths";
 
 .About {
-    p + h2 {
+    p + h2,
+    ul + h2 {
         margin-top: lengths.$big;
         margin-bottom: lengths.$small;
     }
